--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,112 +1,131 @@
+html {
+	position: relative;
+}
 body {
-
+	font:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	width: 960px;
+	margin: auto;
+	position: relative;
 }
 /* header */
 header {
-	margin: 0;
-	padding: 0;
-	border: 0;
+	padding: 30 blue;
+	border: 30 #cccccc;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	background: #ffffff;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	height: auto;
 }
 .namebox {
-	margin: 0;
-	padding: 0;
-	border: 0;
+	margin: auto;
+	padding: 30 blue;
+	border: 30 yellow;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
 }
 h1 {
-
+	color: #777777;
 }
 nav {
-	margin: 0;
-	padding: 0;
-	border: 0;
+	margin: auto;
+	padding: 30 blue;
+	border: 30 yellow;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	background: #4aaaa5;
 }
 /* main content */
 main {
-	margin: 0;
-	padding: 0;
-	border: 0;
+	margin: auto;
+	padding: 30 blue;
+	border: 30 #dddddd;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	background: #ffffff;
 }
 section {
-	margin: 0;
-	padding: 0;
-	border: 0;
+	margin: auto;
+	padding: 30 blue;
+	border: 30 yellow;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	background: #4aaaa5;
+	width: 650px;
 }
 .contenttitlebox {
-	margin: 0;
-	padding: 0;
-	border: 0;
+	margin: auto;
+	padding: 30 blue;
+	border: 30 yellow;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
 }
 h2 {
-
+	color: #777777;
+	font-family: 'Georgia', Times, Times New Roman, serif;
 }
 /* about me content */
 .aboutme{
-
+	background: #4aaaa5;
 }
 /* contact content */
 .contact {
-
+	background: #4aaaa5;
 }
 /* portfolio content */
 .portfolio {
-
+	background: #4aaaa5;
 }
 /* sidebar */
 aside {
-	margin: 0;
-	padding: 0;
-	border: 0;
+	margin: auto;
+	padding: 30 blue;
+	border: 30 yellow;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	background: #4aaaa5;
+	width: 270px;
 }
 .sidebartitlebox {
-	margin: 0;
-	padding: 0;
-	border: 0;
+	margin: auto;
+	padding: 30 blue;
+	border: 30  yellow;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
 }
 h3 {
-
+color: #777777;
+font-family: 'Georgia', Times, Times New Roman, serif;
 }
 .icons {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+	width: 40px;
+	height: auto;
 }
 /* footer */
 footer {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	padding:10px;
+	border: 30 yellow;
+	font-size: 40px;
 	font: inherit;
 	vertical-align: baseline;
+	background: #666666;
+	text-align: center;
+	width: 100%;
+	height: 80px;
 }
 
 h4 {
+	font-family: 'Georgia', Times, Times New Roman, serif;
 
 }
