--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,47 +2,49 @@ html {
 	position: relative;
 }
 body {
-	font:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	width: 960px;
-	margin: auto;
-	position: relative;
+	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	color: #777777;
+	background-color: #efefef;
 }
 /* header */
 header {
-	padding: 30 blue;
-	border: 30 #cccccc;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-	background: #ffffff;
-	font-family: 'Georgia', Times, Times New Roman, serif;
+	width: 100%;
 	height: auto;
+	border-bottom: 2px solid #cccccc;
+	background-color: #ffffff;
 }
 .namebox {
-	margin: auto;
-	padding: 30 blue;
-	border: 30 yellow;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+	display: inline-block;
+	font-family: 'Georgia', Times, 'Times New Roman', serif;
+	font-weight: bold;
+	font-size: 2em;
+	letter-spacing: 0.05em;
+	background-color: #3ba19c;
+	color: #ffffff;
+	padding: 1em;
+	width: auto;
 }
 h1 {
-	color: #777777;
+	color: #fffdfd;
 }
-nav {
-	margin: auto;
-	padding: 30 blue;
-	border: 30 yellow;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-	background: #4aaaa5;
+nav ul li {
+	display: inline-block;
+	padding-left: 1em;
+	margin-left: 1em;
 }
-/* main content */
+nav ul li a {
+	color: #c8c4ca;
+	text-decoration: none;
+}
+nav ul li+li {
+	border-left: 1px solid #c9c7c7;
+}
+/* /* main content */
 main {
+	width: 960px;
 	margin: auto;
-	padding: 30 blue;
-	border: 30 #dddddd;
+	padding: 30 rgb(5, 5, 253);
+	border: 30 #d4d3d3;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -114,15 +116,13 @@ footer {
 	position: absolute;
 	left: 0;
 	bottom: 0;
-	padding:10px;
-	border: 30 yellow;
-	font-size: 40px;
-	font: inherit;
-	vertical-align: baseline;
-	background: #666666;
-	text-align: center;
 	width: 100%;
-	height: 80px;
+	padding: 3em;
+	text-align: center;
+	font-size: 16px;
+	color: #cccccc;
+	background-color: #666666;
+	border-top: 7px solid #1cd3ca;
 }
 
 h4 {
