--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,64 @@
 html {
 	position: relative;
 }
-body {
+html, body {
 	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 	color: #777777;
 	background-color: #efefef;
+	background: #efefef url("../images/shattered.png");
 }
-/* header */
+h1, h2, h3, h4, {
+	font-family: 'Georgia', Times, 'Times New Roman', serif;
+	color: #4aaaa5;
+}
+a {
+	text-decoration: none;
+}
+
+h1 {
+	font-size: 2em;
+}
+
+h2 {
+	font-size: 1.3em;
+}
+/* Header */
 header {
 	width: 100%;
 	height: auto;
 	border-bottom: 2px solid #cccccc;
 	background-color: #ffffff;
 }
+header .headerbox {
+	width: 960px;
+	margin: 0 auto;
+}
+.namebox, nav {
+	display: inline-block;
+    vertical-align: middle;
+    margin: 0;
+    padding: 0;
+}
 .namebox {
+	width: 50%;
+}
+h1 {
 	display: inline-block;
 	font-family: 'Georgia', Times, 'Times New Roman', serif;
 	font-weight: bold;
 	font-size: 2em;
-	letter-spacing: 0.05em;
-	background-color: #3ba19c;
+	letter-spacing: 0.04em;
+	background-color: #4aaaa5;
 	color: #ffffff;
 	padding: 1em;
 	width: auto;
 }
-h1 {
-	color: #fffdfd;
+/* navbar */
+nav {
+	width: 49%;
+	text-align: right;
+	color: #b1adb3;
+	font-weight: normal;
 }
 nav ul li {
 	display: inline-block;
@@ -33,82 +66,127 @@ nav ul li {
 	margin-left: 1em;
 }
 nav ul li a {
-	color: #c8c4ca;
+	color: #b1adb3;
 	text-decoration: none;
+	-webkit-transition: color .4s;
+	transition: color .4s;
 }
 nav ul li+li {
-	border-left: 1px solid #c9c7c7;
+	border-left: 1px solid #cccccc;
 }
-/* /* main content */
+/*Content*/
 main {
 	width: 960px;
-	margin: auto;
-	padding: 30 rgb(5, 5, 253);
-	border: 30 #d4d3d3;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-	background: #ffffff;
+	clear: both;
+	margin: 0 auto 6em auto;
 }
 section {
-	margin: auto;
-	padding: 30 blue;
-	border: 30 yellow;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-	background: #4aaaa5;
-	width: 650px;
+	display: inline-block;
+	width: 570px;
+	margin: 40px 0;
+	padding: 40px;
+	background-color: #ffffff;
+	border: 1px solid #dddddd;
 }
-.contenttitlebox {
-	margin: auto;
-	padding: 30 blue;
-	border: 30 yellow;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+section h2 {
+	font-size: 2em;
+	font-weight: bold;
+	padding-bottom: 1em;
+	margin-bottom: 0.8em;
+	border-bottom: 2px solid #dddddd;
 }
-h2 {
-	color: #777777;
-	font-family: 'Georgia', Times, Times New Roman, serif;
+/* About Me */
+section p {
+	font-size: 18px;
+	line-height: 1.5em;
+	margin-bottom: 2em;
 }
-/* about me content */
-.aboutme{
-	background: #4aaaa5;
+img.headshot {
+	float: left;
+	padding: 0 1em 1em 0;
+	width: 200px;
+	height: 200px;
 }
-/* contact content */
-.contact {
-	background: #4aaaa5;
-}
-/* portfolio content */
-.portfolio {
-	background: #4aaaa5;
-}
-/* sidebar */
-aside {
-	margin: auto;
-	padding: 30 blue;
-	border: 30 yellow;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-	background: #4aaaa5;
+/* Portfolio */
+.portfolio-item {
+	display: inline-block;
+	position: relative;
 	width: 270px;
+	height: 200px;
+	transition: transform .2s ease-out;
 }
-.sidebartitlebox {
-	margin: auto;
-	padding: 30 blue;
-	border: 30  yellow;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+.item-name {
+	position: relative;
+	top: -100px;
+	text-align: center;
+	background-color: #4aaaa5;
+	padding: 1em;
+	color: #ffffff;
+	z-index: 1000;
 }
-h3 {
-color: #777777;
-font-family: 'Georgia', Times, Times New Roman, serif;
+h4 {
+font-weight:bold;
+font-size: 22px;
+}
+/* Contact */
+.contact {
+	width: 540px;
+}
+.contact label {
+	display: block;
+	padding-bottom: 0.5em;
+}
+.contact input, .contact textarea {
+	width: 100%;
+	border: 1px solid #cccccc;
+	margin-bottom: 1.5em;
+	padding: 1em;
+	font-size: .9em;
+}
+.contact input[type="submit"] {
+	width: auto;
+	background-color: #4aaaa5;
+	color: #ffffff;
+	border: none;
+	padding: 1em 2em;
+	font-size: 1em;
+}
+/* Sidebar */
+aside {
+	display: inline-block;
+	width: 190px;
+	padding: 40px;
+	margin: 40px 0 0 30px;
+	vertical-align: top;
+	background-color: #ffffff;
+	border: 1px solid #dddddd;
+}
+aside h3 {
+	font-size: 1.3em;
+	font-weight: bold;
+	padding-bottom: 1em;
+	margin-bottom: 1em;
+	border-bottom: 1px solid #dddddd;
+}
+aside ul li {
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+	-webkit-transition: all .2s;
+	-webkit-transition-timing-function: ease-out;
+	transition: all .2s;
+	transition-timing-function: ease-out;
+
+}
+aside ul li:hover {
+	-ms-transform: scale(1.1,1.1);
+	-webkit-transform: scale(1.1,1.1);
+	-moz-transform: scale(1.1,1.1);
+	-o-transform: scale(1.1,1.1);
+	transform: scale(1.1,1.1);
 }
 .icons {
-	width: 40px;
+	width: 60px;
 	height: auto;
 }
 /* footer */
@@ -124,8 +202,6 @@ footer {
 	background-color: #666666;
 	border-top: 7px solid #1cd3ca;
 }
-
-h4 {
+h5 {
 	font-family: 'Georgia', Times, Times New Roman, serif;
-
 }
